--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@tanstack/react-query": "^5.67.2",
+    "lucide-react": "^0.477.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
