--- a/coffee-shop-back/package.json
+++ b/coffee-shop-back/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.4",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
