--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.477.0",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
