--- a/coffee-shop-back/package.json
+++ b/coffee-shop-back/package.json
@@ -19,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "kavenegar": "^1.1.4",
     "minio": "^8.0.4",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
