--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,7 +18,8 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
