--- a/coffee-shop-back/docker-compose.yml
+++ b/coffee-shop-back/docker-compose.yml
@@ -1,6 +1,31 @@
-version: '3.8'
-
+version: '3'
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - '3000:80'
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+  node-app:
+    # this build line tells Docker Compose where to find the Dockerfile
+    build: .
+    # ports:
+    #   - '3000:3000'
+    environment:
+      - PORT=3000
+    depends_on:
+      - mongo
+  mongo:
+    # here mongo is name of service that can be anything
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=sanjeev
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+    volumes:
+      # mongo-db is name that we give to volums
+      - mongo-db:/data/db
+  redis:
+    image: redis
   minio:
     image: quay.io/minio/minio
     container_name: minio
@@ -11,9 +36,7 @@ services:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     command: server /data --console-address ":9001"
-    volumes:
-      - minio_data:/data
-
+    # volumes:
+    #   - minio_data:/data
 volumes:
-  minio_data:
-# docker-compose up -d
+  mongo-db:
