--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "swiper": "^11.2.5",
     "zustand": "^5.0.3"
   },
