--- a/coffee-shop-admin/.env
+++ b/coffee-shop-admin/.env
@@ -1,2 +1,4 @@
 # NEXT_PUBLIC_API_BASE_URL = "https://amlakbackend.liara.run"
-NEXT_PUBLIC_API_BASE_URL = "http://localhost:5000"
+# NEXT_PUBLIC_API_BASE_URL = "http://localhost:5000"
+NEXT_PUBLIC_API_BASE_URL = "http://localhost:3000"
+
