--- a/coffee-shop-back/nginx/default.conf
+++ b/coffee-shop-back/nginx/default.conf
@@ -10,5 +10,6 @@ server {
 
         proxy_pass http://node-app:3000;
         proxy_redirect off;
+        client_max_body_size 100M; # ✅ افزایش محدودیت به 100MB
     }
 }
