--- a/coffee-shop-back/package.json
+++ b/coffee-shop-back/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon -L server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.772.0",
     "@aws-sdk/lib-storage": "^3.758.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
@@ -20,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "kavenegar": "^1.1.4",
     "minio": "^8.0.4",
