fix: nodemon not found

--- a/coffee-shop-back/Dockerfile
+++ b/coffee-shop-back/Dockerfile
@@ -2,10 +2,8 @@ FROM node:20
 WORKDIR /app
 COPY package*.json ./
 ARG NODE_ENV
-RUN if [ "$NODE_ENV" = "development" ]; \
-        then npm install; \
-        else npm install --only=production; \
-        fi
+RUN npm install
+RUN npm install -g nodemon
 COPY . ./
 COPY .env ./
 ENV PORT 3000
