--- a/coffee-shop-back/docker-compose.yml
+++ b/coffee-shop-back/docker-compose.yml
@@ -16,6 +16,9 @@ services:
         NODE_ENV: production
     volumes:
       - ./.env:/app/.env
+      - ./:/app
+      - /app/node_modules
+    command: npm run dev
     environment:
       - MONGO_USER=${MONGO_USER}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
