--- a/coffee-shop-back/Dockerfile
+++ b/coffee-shop-back/Dockerfile
@@ -2,9 +2,10 @@ FROM node:20
 WORKDIR /app
 COPY package*.json ./
 ARG NODE_ENV
+# RUN npm install
 RUN if [ "$NODE_ENV" = "development" ]; \
         then npm install; \
-        else npm install --only=production; \
+        else npm install; \
         fi
 COPY . ./
 COPY .env ./
