--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@tanstack/react-query": "^5.67.2",
@@ -19,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-otp-input": "^3.1.1",
     "swiper": "^11.2.5",
+    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
