--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^6.4.2",
     "@tanstack/react-query": "^5.67.2",
     "lucide-react": "^0.477.0",
-    "next": "14.2.16",
+    "next": "^14.2.26",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
