--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
-# version: '3'
+version: '3'
 services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - '3000:80'
+      - '80:80' # پورت 80 روی هاست به پورت 80 در کانتینر nginx
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - node-app
+      - backend
+      - frontend-admin
+      - frontend-user
 
-  node-app:
+  backend:
     build:
-      context: .
+      context: ./coffee-shop-back
       args:
         NODE_ENV: production
     volumes:
+      # - ./coffee-shop-back/.env:/app/.env
       - ./.env:/app/.env
-      - ./:/app
+      - ./coffee-shop-back/:/app
       - /app/node_modules
-    command: npm run dev
     environment:
       - MONGO_USER=${MONGO_USER}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
@@ -30,9 +32,45 @@ services:
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
       - MINIO_BUCKET=${MINIO_BUCKET}
+
+    command: npm run dev
+    expose:
+      - '3000' # داخلی 3000
     depends_on:
       - mongo
       - minio
+
+  frontend-admin:
+    build:
+      context: ./coffee-shop-admin
+      dockerfile: Dockerfile
+    volumes:
+      # - ./coffee-shop-admin/.env.production:/app/.env
+      - ./coffee-shop-admin/:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=production
+    command: npm run start
+    expose:
+      - '3000' # داخلی 3000
+    depends_on:
+      - backend
+
+  frontend-user:
+    build:
+      context: ./coffee-shop-front
+      dockerfile: Dockerfile
+    volumes:
+      # - ./coffee-shop-front/.env.production:/app/.env
+      - ./coffee-shop-front/:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=production
+    command: npm run start
+    expose:
+      - '3000' # داخلی 3000
+    depends_on:
+      - backend
 
   mongo:
     image: mongo
@@ -42,7 +80,6 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
       - MONGO_INITDB_DATABASE=coffee-shop-KING
-
     ports:
       - '27017:27017'
     volumes:
@@ -59,6 +96,7 @@ services:
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
+      - ./coffee-shop-back/.env:/app/.env
 
   mongo-express:
     image: mongo-express
@@ -73,6 +111,8 @@ services:
       - ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_PASSWORD}
     depends_on:
       - mongo
+    volumes:
+      - ./coffee-shop-back/.env:/app/.env
 
 volumes:
   mongo-db:
