--- a/coffee-shop-front/package.json
+++ b/coffee-shop-front/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@tanstack/react-query": "^5.67.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.477.0",
     "next": "^14.2.26",
     "react": "^18",
