--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,126 @@
-version: '3'
+# services:
+#   nginx:
+#     image: nginx:stable-alpine
+#     container_name: coffee-nginx
+#     ports:
+#       - '80:80'
+#     volumes:
+#       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+#     depends_on:
+#       - backend
+#       - frontend-admin
+#       - frontend-user
+
+#   backend:
+#     build:
+#       context: ./coffee-shop-back
+#       args:
+#         NODE_ENV: production
+#     volumes:
+#       - ./.env:/app/.env
+#       - ./coffee-shop-back/:/app
+#       - /app/node_modules
+#     environment:
+#       - MONGO_USER=${MONGO_USER}
+#       - MONGO_PASSWORD=${MONGO_PASSWORD}
+#       - MONGO_IP=${MONGO_IP}
+#       - MONGO_PORT=${MONGO_PORT}
+#       - MONGO_DB=${MONGO_DB}
+#       - MINIO_ENDPOINT=${MINIO_ENDPOINT}
+#       - MINIO_PORT=${MINIO_PORT}
+#       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+#       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+#       - MINIO_BUCKET=${MINIO_BUCKET}
+
+#     command: npm run dev
+#     expose:
+#       - '3000'
+#     depends_on:
+#       - mongo
+#       - minio
+
+#   frontend-user:
+#     build:
+#       context: ./coffee-shop-front
+#       dockerfile: Dockerfile
+#     volumes:
+#       - ./coffee-shop-front/:/app
+#       - /app/node_modules
+#     environment:
+#       - NODE_ENV=production
+#     command: npm run start
+#     expose:
+#       - '3000'
+#     depends_on:
+#       - backend
+
+#   frontend-admin:
+#     build:
+#       context: ./coffee-shop-admin
+#       dockerfile: Dockerfile
+#     volumes:
+#       - ./coffee-shop-admin/:/app
+#       - /app/node_modules
+#     environment:
+#       - NODE_ENV=production
+#     command: npm run start
+#     expose:
+#       - '3000'
+#     depends_on:
+#       - backend
+
+#   mongo:
+#     image: mongo
+#     restart: always
+#     command: ['--bind_ip_all', '--port', '27017']
+#     environment:
+#       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+#       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+#       - MONGO_INITDB_DATABASE=coffee-shop-KING
+#     ports:
+#       - '27017:27017'
+#     volumes:
+#       - mongo-db:/data/db
+
+#   minio:
+#     image: quay.io/minio/minio
+#     ports:
+#       - '9000:9000'
+#       - '9001:9001'
+#     environment:
+#       - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+#       - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
+#     command: server /data --console-address ":9001"
+#     volumes:
+#       - minio_data:/data
+#       - ./coffee-shop-back/.env:/app/.env
+
+#   mongo-express:
+#     image: mongo-express
+#     ports:
+#       - '8081:8081'
+#     environment:
+#       - ME_CONFIG_MONGODB_URL=${MONGO_URI}
+#       - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USER}
+#       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASSWORD}
+#       - ME_CONFIG_MONGODB_SERVER=${MONGO_IP}
+#       - ME_CONFIG_BASICAUTH_USERNAME=${MONGO_USER}
+#       - ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_PASSWORD}
+#     depends_on:
+#       - mongo
+#     volumes:
+#       - ./coffee-shop-back/.env:/app/.env
+
+# volumes:
+#   mongo-db:
+#   minio_data:
+
 services:
   nginx:
     image: nginx:stable-alpine
+    container_name: coffee-nginx
     ports:
-      - '80:80' # پورت 80 روی هاست به پورت 80 در کانتینر nginx
+      - '80:80'
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
@@ -17,7 +134,6 @@ services:
       args:
         NODE_ENV: production
     volumes:
-      # - ./coffee-shop-back/.env:/app/.env
       - ./.env:/app/.env
       - ./coffee-shop-back/:/app
       - /app/node_modules
@@ -35,40 +151,36 @@ services:
 
     command: npm run dev
     expose:
-      - '3000' # داخلی 3000
+      - '3000'
     depends_on:
       - mongo
       - minio
-
-  frontend-admin:
-    build:
-      context: ./coffee-shop-admin
-      dockerfile: Dockerfile
-    volumes:
-      # - ./coffee-shop-admin/.env.production:/app/.env
-      - ./coffee-shop-admin/:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=production
-    command: npm run start
-    expose:
-      - '3000' # داخلی 3000
-    depends_on:
-      - backend
 
   frontend-user:
     build:
       context: ./coffee-shop-front
       dockerfile: Dockerfile
     volumes:
-      # - ./coffee-shop-front/.env.production:/app/.env
-      - ./coffee-shop-front/:/app
       - /app/node_modules
     environment:
       - NODE_ENV=production
     command: npm run start
     expose:
-      - '3000' # داخلی 3000
+      - '3000'
+    depends_on:
+      - backend
+
+  frontend-admin:
+    build:
+      context: ./coffee-shop-admin
+      dockerfile: Dockerfile
+    volumes:
+      - /app/node_modules
+    environment:
+      - NODE_ENV=production
+    command: npm run start
+    expose:
+      - '3000'
     depends_on:
       - backend
 
@@ -91,8 +203,8 @@ services:
       - '9000:9000'
       - '9001:9001'
     environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
+      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
