--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,30 +1,81 @@
+# server {
+#   listen 80;
+
+#   location /api {
+#     proxy_pass http://backend:3000;
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_redirect off;
+#     client_max_body_size 100M;
+#   }
+
+#   location /admin {
+#     proxy_pass http://frontend-admin:3000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection 'upgrade';
+#     proxy_set_header Host $host;
+#     proxy_cache_bypass $http_upgrade;
+#   }
+
+#   location / {
+#     proxy_pass http://frontend-user:3000;
+#     proxy_http_version 1.1;
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection 'upgrade';
+#     proxy_set_header Host $host;
+#     proxy_cache_bypass $http_upgrade;
+#   }
+# }
+
 server {
   listen 80;
+  server_name koorowshcoffee.ir www.koorowshcoffee.ir;
+  client_max_body_size 100M;
 
-  location /api {
-    proxy_pass http://backend:3000;
+
+  location /api/ {
+    proxy_pass http://backend:3000/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_redirect off;
-    client_max_body_size 100M;
-  }
-
-  location /admin {
-    proxy_pass http://frontend-admin:3000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   location / {
-    proxy_pass http://frontend-user:3000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
+    proxy_pass http://frontend-user:3000/;
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+}
+
+server {
+  listen 80;
+  server_name admin.koorowshcoffee.ir;
+
+  location / {
+    proxy_pass http://frontend-admin:3000/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+}
+
+server {
+  listen 80;
+  server_name minio.koorowshcoffee.ir;
+
+  client_max_body_size 100M;
+
+  location / {
+    proxy_pass http://minio:9000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
