change .env.production url

--- a/coffee-shop-front/.env.production
+++ b/coffee-shop-front/.env.production
@@ -1,4 +1,4 @@
 # فقط در حالت npm run build و npm run start استفاده می‌شود
 NODE_ENV=production
 MY_API_URL=https://koorowshcoffee.ir/api
-NEXT_PUBLIC_API_BASE_URL="https://koorowshcoffee.i/api"
+NEXT_PUBLIC_API_BASE_URL="https://koorowshcoffee.ir/api"
